# Research_Notes

./: README.md
2_sklearn_opt/: NN_energies.py
2_sklearn_opt/h3o/: NN_energies.py
4_NN_benchmark/datasets/: ochco  ochco_fi  produce_fi.py
4_NN_benchmark/gaussian_process_control/: .use_peslearn.py.swp  gaussian_process.py  minmax_FI_result
4_NN_benchmark/pytorch_nn/: pytorch_nn.py  result
4_NN_benchmark/pytorch_nn/version_2/: pytorch_nn.py
4_NN_benchmark/pytorch_nn/version_3/: fi_result
4_NN_benchmark/sklearn_nn/: FI_result  result  sklearn_nn.py
Advanced_quantum_hw/problem_set_1/: hw1.aux  hw1.tex
Advanced_quantum_hw/problem_set_1/pydiffeq/: test.py
ML_forceconstants/water_1/: compute_energy.py  derivatives.py
ML_forceconstants/water_1/Btensors/: __init__.py  ad_btensor.py  ad_intcos.py  test_suite.py
ML_forceconstants/water_1/model_data/: model.pt
Quax_dev_archive/quax_misc/benchmarks/: binom_prefac.py  factorial_benchmark.py
Quax_dev_archive/quax_tests/findif/: findif_test.py
Quax_dev_archive/quax_tests/localtests/: CACHE  HOWTOpprof.txt  TEMP.py  accuracy.py  benchmark.py  create_tei_deriv.py  deriv_tei_test.py  external_integrals_test.py  external_tei_test.py  geom.xyz  h2otzhess.prof  h2sto3gpartialquar.prof  hess_test.py  mem_profile.py  mo_transform_benchmark.py  new_accuracy.py  newtest.py  old_mo_transform_benchmark.py  psi.17401.clean  psi.29548.clean  psi.6602.clean  psi.9774.clean  scf_quartic_test.py  tmp.py
Quax_dev_archive/quax_tests/localtests/libint_interface/pit_of_despair/hello_world_trial2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloworld.cpp
Quax_dev_archive/quax_tests/localtests/libint_interface/pit_of_despair/try_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloworld.cpp  libint2-config-version.cmake
TODO/: cli_tutorial.md
autodiffBtensor/: FAST_RESULT  RESULT  ad_btensor.py  ad_intcos.py  ad_v3d.py  all_test.py  ammonia.py  autodiffB.py  efficientB.py  fast_test_suite.out  fast_test_suite.py  test.out  test.py  test_suite.out  test_suite.py
autodiffBtensor/benchmark/: 1_autograd.py  2_pytorch.py  3_tensorflow.py  4_tensorflow.py  5_pytorch.py
autodiffBtensor/gengeom/: output.mol.13835.intco  output.mol.21089.intco
autodiffBtensor/helper/: helper.py  v3d.py
autodiffBtensor/psi4test/: test_linear_h2o.py
cclib/: import_test.py
cclib/inittest/opt/: test.py
cclib/inittest/singlept/: test.py
finance/: README.md
finance/options/: black_scholes.py  risk_free_rate.py  vol_surf.py
hdf5_practice/cpp_to_python/: makefile  test  test.cc
hdf5_practice/create_test/: a.out  create  makefile
hdf5_practice/docs_example/: control.cc  makefile
hdf5_practice/hyperslab/: hyperslab.cc
hdf5_practice/my_test/: a.out  makefile  maybe  maybe.cc
hdf5_practice/python/: load.py  save.py
hdf5_practice/tmp/: a.out  makefile
hyperopt/: 1dpoly_opt.py  2dpoly_opt.py  multipoly.py  notes  sixth_legendrepoly.py
libint_tests/: README.md
libint_tests/hdf5_test/: create  makefile
libint_tests/hdf5_test/minimal/: create  makefile
libint_tests/libint_h5_deriv/: deriv_test.py  makefile  pylibint.cc
libint_tests/libint_h5hyperslab/: pylibint.cc  run.py
libint_tests/libint_pybind/: makefile  pylibint.cc  run.py
libint_tests/libint_pybind_hdf5/: makefile  overlap.h5  pylibint.cc  run.py
load_model/: load.py  model.json  saved_model.npy
load_model/mlchem_stuff/: debug.py  run.py  test.py
magma_generator/: induced_permutations.py  main.py
ml_testbed/1_keras_opt/: custom_optimizers.py
ml_testbed/1_keras_opt/setup/: NN_energies.py  custom_optimizers.py  custom_optimizers2.py
ml_testbed/1_keras_opt/stack_exchange/: test.py
ml_testbed/2_sklearn_opt/: NN_energies.py
new_coordinate_reader/: read.py
nitrogen/TUTORIAL/: pynitrogen.tex
nitrogen/test1/: notes  test  test.c
nitrogen/test2/: my_module.py  test  test.c
nitrogen/test3/: compile.sh  test  test.c
nitrogen/version_1/: my_module.py  test
nitrogen/version_2/: NOTES
nitrogen/version_2/trial1/: test  (+2 more)
nitrogen/version_3/: NOTES  my_module.py  test  test.c
nitrogen/version_4/: my_module.py  test  test.c
nitrogen/version_5/: test  test.c
nitrogen/version_6/: my_module.py  test  test.c
notes/: FI.md  PIPs.md  feature_notes.md  itinerary.md  structure_based_sampling.md
notes/peslearn_notes/: FI.md
peslearn_systematic_buildup/: build.py
peslearn_systematic_buildup/h2co/: build.py
peslearn_systematic_buildup/model1_data/: compute_energy.py  hyperparameters  model.json  performance  test_set  train_set
peslearn_systematic_buildup/model2_data/: compute_energy.py  hyperparameters  model.json  performance  test_set  train_set
peslearn_systematic_buildup/model3_data/: compute_energy.py  hyperparameters  model.json  performance  test_set  train_set
peslearn_systematic_buildup/model4_data/: compute_energy.py  hyperparameters  model.json  performance  test_set  train_set
peslearn_systematic_buildup/model5_data/: compute_energy.py  hyperparameters  model.json  performance  test_set  train_set
progress_summaries/: Apr15.md  Apr16.md  Apr2.md  Apr23.md  Apr9.md  Feb12_Feb19.md  Feb24.md  Feb5.md  First2Months.md  Jan29.md  Mar19.md  Mar26.md  Mar5_Mar12.md
psitorch/psi4_h2_minbasis/: compute.py
quant_notes/: bigo.md  data_structures.md
quant_notes/Hull/: README.md  chapter1.md
quant_notes/NumPy/: numpy_cheatsheet.md
quant_notes/Pandas/: pandas_cheatsheet.md
quant_notes/stats/: stats.md
regex_tests/: regex.py
singular_generator/: induced_permutations.py  main.py
singular_generator/hcooh_2/: sing.inp
singular_generator/test_python/: output1  test.py
singular_generator/timings_test/: induced_permutations.py  main.py
symmetric_groups/: induced_permutations.py  permutation_cycles.py  righthand_lefthand_cycles.py  symmetric_group_permutations.py
symmetric_groups/permutation_generator/: symmetric_group_permutations.py
training_set_sampling/: all.py
upper_triangle_symmetric_tensor/code/: general.py
voting_data/: README.md  analyze.py  get_data.py  voting_data.csv
(+1418 files in other folders)
